Displayed Dino data to the ui

--- a/index.html
+++ b/index.html
@@ -64,17 +64,13 @@
           <option>Omnivor</option>
           <option>Carnivor</option>
         </select>
-        <div id="btn">Compare Me!</div>
+        <div class="btn">Compare Me!</div>
       </div>
     </form>
-    <!-- .grid to attach tiles to -->
+
     <div class="dino_container">
       <!-- <div id='child1'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati non animi eius modi sed! Ea, nulla ab consequuntur ?</div>
-
-      <div id='child1'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati non animi eius modi sed! Ea, nulla ab consequuntur ?</div>
-
-      <div id='child1'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati non animi eius modi sed! Ea, nulla ab consequuntur ?</div>
-      <div id='child1'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati non animi eius modi sed! Ea, nulla ab consequuntur ?</div> -->
+ -->
     </div>
     <footer>
       <!-- Include information source -->
