--- a/index.html
+++ b/index.html
@@ -1,84 +1,111 @@
-<!-- @format -->
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dinographic</title>
-    <!-- Include Google fonts: Frijole, Open Sans, Oswald -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Frijole|Open+Sans|Oswald&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Normalize browser styles -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      rel="stylesheet"
-    />
 
-    <link href="app.css" rel="stylesheet" />
-    <!-- Link to app.js with defer till HTML render -->
-    <script defer src="app.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Dinographic</title>
+  <!-- Include Google fonts: Frijole, Open Sans, Oswald -->
+  <link href="https://fonts.googleapis.com/css?family=Frijole|Open+Sans|Oswald&display=swap" rel="stylesheet" />
+  <!-- Normalize browser styles -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
+  <link href="app.css" rel="stylesheet" />
+  <!-- Link to app.js with defer till HTML render -->
+  <script defer src="app.js"></script>
+</head>
 
-
-  </head>
-  <body>
-    <header>
-      <h2>Natural History Museum</h2>
-      <h1>Dinosaurs</h1>
-      <h3>How do you compare?</h3>
-    </header>
-    <!-- Form to get user input -->
-
-    
-      <h1>DINO</h1>
+<body>
+  <header>
+    <h2>Natural History Museum</h2>
+    <h1>Dinosaurs</h1>
+    <h3>How do you compare?</h3>
+  </header>
+  <!-- Form to get user input -->
+  <form id="dino-compare">
+    <div class="form-container">
+      <p>Name:</p>
+      <input id="name" class="form-field__full" type="name" name="name" />
+      <p>Height</p>
+      <label>Feet:
+        <input id="feet" class="form-field__short" type="number" name="feet" /></label>
+      <label>inches:
+        <input id="inches" class="form-field__short" type="number" name="inches" /></label>
+      <p>Weight:</p>
+      <label><input id="weight" class="form-field__full" type="number" name="weight" />lbs</label>
+      <p>Diet:</p>
+      <select id="diet" class="form-field__full" name="diet">
+        <option>Herbavor</option>
+        <option>Omnivor</option>
+        <option>Carnivor</option>
+      </select>
+      <div id="btn">Compare Me!</div>
+    </div>
+  </form>
+  <!-- .grid to attach tiles to -->
+  <main id="grid">
+    <div class="grid-item dino1">
+      <!-- <h3>Dino</h3>
+            <img src="./images/anklyosaurus.png" alt="">
+            <p>First discovered in 1889 by Othniel Charles Marsh
+            </p> -->
     </div>
 
-  </div>
-    <form id="dino-compare">
-      <div class="form-container">
-        <p>Name:</p>
-        <input id="name" class="form-field__full" type="name" name="name" />
-        <p>Height</p>
-        <input
-          id="height"
-          class="form-field__short"
-          type="number"
-          name="feet"
-        />
-
-        <p>Weight:</p>
-        <label
-          ><input
-            id="weight"
-            class="form-field__full"
-            type="number"
-            name="weight"
-          />lbs</label
-        >
-        <p>Diet:</p>
-        <select id="diet" class="form-field__full" name="diet">
-          <option>Herbavor</option>
-          <option>Omnivor</option>
-          <option>Carnivor</option>
-        </select>
-        <div class="btn">Compare Me!</div>
-      </div>
-    </form>
-
-    <div class="dino_container">
-      <!-- <div id='child1'>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati non animi eius modi sed! Ea, nulla ab consequuntur ?</div>
- -->
+    <div class="grid-item dino2">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
     </div>
-    <footer>
-      <!-- Include information source -->
-      <p class="fine-print">
-        Data Sourced from
-        <a href="https://www.wikipedia.org/">Wikipedia.org</a>, all numbers are
-        approximations.
-      </p>
-    </footer>
-  </body>
+
+    <div class="grid-item dino3">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+
+    <div class="grid-item dino4">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+
+    <div class="grid-item human">
+      <!-- <h3>Human</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+
+    <div class="grid-item dino5">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+
+    <div class="grid-item dino6">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+
+    <div class="grid-item dino7">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+    <div class="grid-item dino8">
+      <!-- <h3>Dino</h3>
+        <img src="./images/anklyosaurus.png" alt="" />
+        <p>First discovered in 1889 by Othniel Charles Marsh</p> -->
+    </div>
+  </main>
+  <footer>
+    <!-- Include information source -->
+    <p class="fine-print">
+      Data Sourced from
+      <a href="https://www.wikipedia.org/">Wikipedia.org</a>, all numbers are
+      approximations.
+    </p>
+  </footer>
+</body>
+
 </html>
