--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
       <p>Name:</p>
       <input id="name" class="form-field__full" type="name" name="name" />
       <p>Height</p>
-      <label>Feet:
-        <input id="feet" class="form-field__short" type="number" name="feet" /></label>
-      <label>inches:
-        <input id="inches" class="form-field__short" type="number" name="inches" /></label>
+
+      <input id="height" class="form-field__short" type="number" name="height" />
+
       <p>Weight:</p>
       <label><input id="weight" class="form-field__full" type="number" name="weight" />lbs</label>
       <p>Diet:</p>
