--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         >
         <p>Diet:</p>
         <select id="diet" class="form-field__full" name="diet">
-          <option>Herbavor</option>
-          <option>Omnivor</option>
-          <option>Carnivor</option>
+          <option>herbavor</option>
+          <option>omnivor</option>
+          <option>carnivor</option>
         </select>
         <div id="btn">Compare Me!</div>
       </div>
